--- a/budgetSite.html
+++ b/budgetSite.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Your Budget</h1>
+    <h3>I didn't know a lot of html functionality doesn't work in Dropbox preview!</h3>
     <div>
         <p id="displayDisposable">£0</p>
     </div>
